Edited the comments on my div index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#">tutorials/</a></li>
                 <li><a href="#">contact me</a></li>
             </ul> 
-        </div> <!-- End of side_bar -->
+        </div> <!-- End of Side_bar -->
 
         <div id="main_content">
             <h2>My essays</h2>
@@ -48,7 +48,7 @@
                 <li><span class="not_bold">Taboo "OO".</span> The term "OO" is so overloaded that we should stop using it. Better substitutes are "classes and "protptypes".</li>
                 <li><span>How Class based Programming Sucks.</span> Classes are vastly sub-optimal.Functional programming is far better.</li>
             </ul>
-        </div> <!-- End of main_content -->
+        </div> <!-- End of Main_content -->
 
         <div id="footer"> 
             <p>Contact, suggestions: Send me an email at  <span class="not_bold"> l@loup-vaillant.fr</span></p>
